# visual-embedding-api

./: .dockerignore  .ebignore  .gitignore  Dockerfile  Makefile  README.md  app.py  application.py  es_utils.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  serverless.yml  vectorize.py
.github/workflows/: deploy.yml
notebooks/: elasticsearch.ipynb
src/: app.py  utils.py
vgg16/: saved_model.pb
vgg16/variables/: variables.index
